--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,9 +5,12 @@ server:
   port: ${PORT:8080}
 spring:
   datasource:
-    url: jdbc:mysql://xq7t6tasopo9xxbs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/rhow2nat8546ze26?useSSL=false&useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
-    username: g7fud9t67e5ioxaq
-    password: zmrigg1g5k1rs4az
+#    url: jdbc:mysql://xq7t6tasopo9xxbs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/rhow2nat8546ze26?useSSL=false&useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+#    username: g7fud9t67e5ioxaq
+#    password: zmrigg1g5k1rs4az
+    url: jdbc:mysql://localhost:3306/apilivebusdb?useSSL=false&useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+    username: root
+    password: root
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
